--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -36,7 +36,7 @@
 
 <div class="container-fluid main_content" >
     <div class ="query_section">
-        <div class="query_content">
+        <div class="row query_row">
             <span class="col-sm-1">基础信息</span>
             <span class="col-sm-10">
                 <form class="form-inline">
@@ -74,6 +74,7 @@
                 </form>
             </span>
         </div>
+
     </div>
 
 
