--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -153,8 +153,42 @@
 <!--query section end-->
 
 <div class="container-fluid main_content" >
+    <div class="row">
+        <div class="pull-right" style="margin-right: 16px;margin-bottom: 10px">
+            <button class="btn btn-success btn-sm">新建</button>
+            <button class="btn btn-default btn-sm">复制</button>
+            <button class="btn btn-default btn-sm">发布</button>
+            <button class="btn btn-default btn-sm">截止</button>
+        </div>
+    </div>
+    <div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="col-sm-2">
+                    升舱组描述><br/>
+                    升舱子组描述><br/>
 
-    hello world
+                    <div class="checkbox-inline">
+                        <input  id ="a7" type="checkbox"> <label for="a7">[0BJ]升舱</label>
+                    </div>
+                </div>
+                <div class="col-sm-10">
+                    <ul class="list-group">
+                        <li class="list-group-item">Cras justo odio</li>
+                        <li class="list-group-item">Dapibus ac facilisis in</li>
+                        <li class="list-group-item">Morbi leo risus</li>
+                        <li class="list-group-item">Porta ac consectetur ac</li>
+                        <li class="list-group-item">Vestibulum at eros</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
 </div>
 
 
