--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -38,7 +38,7 @@
 <div class ="query_section">
     <form class="form-inline">
         <!--query row1 start-->
-        <div class="row query_row">
+        <div class="query_row">
             <span class="query_title">基础信息</span>
             <span class="col-sm-11">
                 <div class="form-group">
@@ -84,7 +84,7 @@
 
         <div id ="moreQuerySection" >
             <!--query row2 start-->
-            <div class="row query_row">
+            <div class="query_row">
                 <span class="query_title">服务等级&nbsp;|&nbsp;机型</span>
             <span class="col-sm-10">
                  <div class="form-group">
@@ -128,7 +128,7 @@
             </div>
             <!--query row2 end-->
             <!--query row3 start-->
-            <div class="row query_row">
+            <div class="query_row">
                 <span class="query_title2">地理位置</span>
             <span class="col-sm-10">
                 <div class="form-group">
