--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -13,7 +13,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-only">导航菜单</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -39,8 +39,7 @@
     <form class="form-inline">
         <!--query row1 start-->
         <div class="query_row">
-            <span class="query_title">基础信息</span>
-            <span class="col-sm-11">
+                <span class="query_title">基础信息</span>
                 <div class="form-group">
                     <div class="checkbox">
                         <input id ="c1" type="checkbox"><label for="c1">未发布</label>
@@ -78,15 +77,13 @@
                     <input  id ="showHideMoreQuerySectionBtn" type="checkbox"> <label for="showHideMoreQuerySectionBtn">更多条件</label>
                 </div>
                 <button type="submit" class="btn btn-default btn-sm btn-primary">查询</button>
-            </span>
         </div>
         <!--query row1 end-->
 
         <div id ="moreQuerySection" >
             <!--query row2 start-->
             <div class="query_row">
-                <span class="query_title">服务等级&nbsp;|&nbsp;机型</span>
-            <span class="col-sm-10">
+                 <span class="query_title">服务等级&nbsp;|&nbsp;机型</span>
                  <div class="form-group">
                      <div class="checkbox">
                          <input id ="a1" type="checkbox"><label for="a1">豪华头等舱</label>
@@ -124,13 +121,11 @@
                     <label class="marginR5">优先级序号</label>
                     <input type="text" class="form-control input-sm"  style="width: 100px">
                 </div>
-            </span>
             </div>
             <!--query row2 end-->
             <!--query row3 start-->
             <div class="query_row">
-                <span class="query_title2">地理位置</span>
-            <span class="col-sm-10">
+                <span class="query_title">地理位置</span>
                 <div class="form-group">
                     <label   class="marginR5">区域1</label>
                     <input type="text" class="form-control input-sm"  style="width: 100px">
@@ -143,7 +138,6 @@
                      <label class="marginR5">经过区域</label>
                      <input type="text" class="form-control input-sm"  style="width: 100px">
                  </div>
-            </span>
             </div>
             <!--query row3 end-->
         </div>
