--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -148,14 +148,14 @@
 
 <div class="container-fluid main_content" >
     <div class="row">
-        <div class="pull-right" style="margin-right: 16px;margin-bottom: 10px">
+        <div class="pull-right" style="margin-bottom: 8px">
             <button class="btn btn-success btn-sm">新建</button>
             <button class="btn btn-default btn-sm">复制</button>
             <button class="btn btn-default btn-sm">发布</button>
             <button class="btn btn-default btn-sm">截止</button>
         </div>
     </div>
-    <div>
+    <div class="row">
         <div class="panel panel-default">
             <div class="panel-body">
                 <div class="col-sm-2">
