--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -147,37 +147,170 @@
 <!--query section end-->
 
 <div class="container-fluid main_content" >
-    <div class="row">
+
         <div class="pull-right" style="margin-bottom: 8px">
             <button class="btn btn-success btn-sm">新建</button>
             <button class="btn btn-default btn-sm">复制</button>
             <button class="btn btn-default btn-sm">发布</button>
             <button class="btn btn-default btn-sm">截止</button>
         </div>
-    </div>
-    <div class="row">
-        <div class="panel panel-default">
+        <span class="clearfix"></span>
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                    <span>
+                        升舱组描述>升舱子组描述>
+                        <span class="checkbox-inline">
+                            <input  id ="a7" type="checkbox"> <label for="a7">[0BJ]升舱</label>
+                        </span>
+                    </span>
+                </h3>
+            </div>
             <div class="panel-body">
-                <div class="col-sm-2">
-                    升舱组描述><br/>
-                    升舱子组描述><br/>
-
-                    <div class="checkbox-inline">
-                        <input  id ="a7" type="checkbox"> <label for="a7">[0BJ]升舱</label>
-                    </div>
-                </div>
-                <div class="col-sm-10">
-                    <ul class="list-group">
-                        <li class="list-group-item">Cras justo odio</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
-                    </ul>
-                </div>
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
+
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                        <span>
+                        行李 > 计重预付费行李 >
+                            <span class="checkbox-inline">
+                                <input  id ="a7" type="checkbox"> <label for="a7">[0DG]UPTO50LB 23KG </label>
+                            </span>
+                        </span>
+                </h3>
+            </div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                        <span>
+                            通用券 > 通用券 >
+                            <span class="checkbox-inline">
+                                <input  id ="a7" type="checkbox"> <label for="a7">[0S5]通用券</label>
+                            </span>
+                        </span>
+                </h3>
+            </div>
+            <div class="panel-body">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <div class="productsImg"></div>
+                        <span class="marginLR15"></span>
+                        这里是描述信息
+                    </li>
+                </ul>
+            </div>
+        </div>
+
 
 
 
