oc前台页面样式调整

--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -171,35 +171,38 @@
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0B5.jpg" class="productsImg">
+                        <span class="marginLR15"></span>
+                        <span class="">
+                            这里是描述信息
+                        </span>
+
+                    </li>
+                    <li class="list-group-item">
+                        <input  id ="a7" type="checkbox">
+                        <span class="marginLR15"></span>
+                        <img src="../images/products/0B5.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0B5.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0B5.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0B5.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
@@ -210,12 +213,12 @@
         <div class="panel panel-info">
             <div class="panel-heading">
                 <h3 class="panel-title">
-                        <span>
+                    <span>
                         行李 > 计重预付费行李 >
-                            <span class="checkbox-inline">
-                                <input  id ="a7" type="checkbox"> <label for="a7">[0DG]UPTO50LB 23KG </label>
-                            </span>
+                        <span class="checkbox-inline">
+                            <input  id ="a7" type="checkbox"> <label for="a7">[0DG]UPTO50LB 23KG </label>
                         </span>
+                    </span>
                 </h3>
             </div>
             <div class="panel-body">
@@ -223,35 +226,35 @@
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0LO.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0LO.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0LO.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0LO.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0LO.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
@@ -262,12 +265,12 @@
         <div class="panel panel-info">
             <div class="panel-heading">
                 <h3 class="panel-title">
-                        <span>
-                            通用券 > 通用券 >
-                            <span class="checkbox-inline">
-                                <input  id ="a7" type="checkbox"> <label for="a7">[0S5]通用券</label>
-                            </span>
+                    <span>
+                        通用券 > 通用券 >
+                        <span class="checkbox-inline">
+                            <input  id ="a7" type="checkbox"> <label for="a7">[0S5]通用券</label>
                         </span>
+                    </span>
                 </h3>
             </div>
             <div class="panel-body">
@@ -275,35 +278,35 @@
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0LO.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0LO.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0LO.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0LO.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
                     <li class="list-group-item">
                         <input  id ="a7" type="checkbox">
                         <span class="marginLR15"></span>
-                        <div class="productsImg"></div>
+                        <img src="../images/products/0LO.jpg" class="productsImg">
                         <span class="marginLR15"></span>
                         这里是描述信息
                     </li>
