s7query页面原型整理完成第一版

--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -168,154 +168,46 @@
             </div>
             <div class="panel-body">
                 <ul class="list-group">
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0B5.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        <span class="">
+                    <li class="list-group-item s7_list_row">
+                        <span class="s7_list_item s7_list_checkbox ">
+                             <input  type="checkbox">
+                        </span>
+                        <span class="productsImg"></span>
+                        <span class="s7_list_item s7_list_descr text-info marginL15">
                             这里是描述信息
                         </span>
-
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0B5.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0B5.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0B5.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0B5.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="panel panel-info">
-            <div class="panel-heading">
-                <h3 class="panel-title">
-                    <span>
-                        行李 > 计重预付费行李 >
-                        <span class="checkbox-inline">
-                            <input  id ="a7" type="checkbox"> <label for="a7">[0DG]UPTO50LB 23KG </label>
+                        <span class="s7_list_item s7_list_seq marginLR15">10356</span>
+                        <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
+                        <span class="s7_list_item  text-danger marginLR15">未发布</span>
+                        <span class="s7_list_item s7_list_price text-success">230CNY</span>
+                        <span class="s7_list_item pull-right">
+                            <i class="glyphicon glyphicon-search"></i>
+                            <i class="glyphicon glyphicon-pencil marginLR5"></i>
+                            <i class="glyphicon glyphicon-trash"></i>
                         </span>
-                    </span>
-                </h3>
-            </div>
-            <div class="panel-body">
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0LO.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
                     </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0LO.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0LO.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0LO.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0LO.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                </ul>
-            </div>
-        </div>
 
-        <div class="panel panel-info">
-            <div class="panel-heading">
-                <h3 class="panel-title">
-                    <span>
-                        通用券 > 通用券 >
-                        <span class="checkbox-inline">
-                            <input  id ="a7" type="checkbox"> <label for="a7">[0S5]通用券</label>
+                    <li class="list-group-item s7_list_row">
+                        <span class="s7_list_item s7_list_checkbox ">
+                             <input  type="checkbox">
                         </span>
-                    </span>
-                </h3>
-            </div>
-            <div class="panel-body">
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0LO.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0LO.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0LO.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0LO.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
-                    </li>
-                    <li class="list-group-item">
-                        <input  id ="a7" type="checkbox">
-                        <span class="marginLR15"></span>
-                        <img src="../images/products/0LO.jpg" class="productsImg">
-                        <span class="marginLR15"></span>
-                        这里是描述信息
+                        <span class="productsImg"></span>
+                        <span class="s7_list_item s7_list_descr text-info marginL15">
+                            这里是描述信息
+                        </span>
+                        <span class="s7_list_item s7_list_seq marginLR15">10356</span>
+                        <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
+                        <span class="s7_list_item  text-danger marginLR15">未发布</span>
+                        <span class="s7_list_item s7_list_price text-success">99998CNY</span>
+                        <span class="s7_list_item pull-right">
+                            <i class="glyphicon glyphicon-search"></i>
+                            <i class="glyphicon glyphicon-pencil marginLR5"></i>
+                            <i class="glyphicon glyphicon-trash"></i>
+                        </span>
                     </li>
                 </ul>
             </div>
         </div>
-
-
-
 
 
 
