日期控件加入其中

--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css"/>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -69,8 +70,8 @@
                 </div>
                 <div class="form-group">
                     <label class="marginR5">销售日期</label>
-                    <input type="text" class="form-control input-sm"  placeholder="起始日期" style="width: 80px">
-                    <input type="text" class="form-control input-sm"  placeholder="结束日期" style="width: 80px">
+                    <input type="text" class="form-control input-sm datepicker"  placeholder="起始日期" style="width: 80px">
+                    <input type="text" class="form-control input-sm datepicker"  placeholder="结束日期" style="width: 80px">
                 </div>
 
                 <div class="checkbox marginLR15">
@@ -147,7 +148,6 @@
 <!--query section end-->
 
 <div class="container-fluid main_content" >
-
         <div class="pull-right" style="margin-bottom: 8px">
             <button class="btn btn-success btn-sm">新建</button>
             <button class="btn btn-default btn-sm">复制</button>
@@ -205,17 +205,93 @@
                             <i class="glyphicon glyphicon-trash"></i>
                         </span>
                     </li>
+
+                    <li class="list-group-item s7_list_row">
+                        <span class="s7_list_item s7_list_checkbox ">
+                             <input  type="checkbox">
+                        </span>
+                        <span class="productsImg"></span>
+                        <span class="s7_list_item s7_list_descr text-info marginL15">
+                            这里是描述信息
+                        </span>
+                        <span class="s7_list_item s7_list_seq marginLR15">10356</span>
+                        <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
+                        <span class="s7_list_item  text-danger marginLR15">未发布</span>
+                        <span class="s7_list_item s7_list_price text-success">99998CNY</span>
+                        <span class="s7_list_item pull-right">
+                            <i class="glyphicon glyphicon-search"></i>
+                            <i class="glyphicon glyphicon-pencil marginLR5"></i>
+                            <i class="glyphicon glyphicon-trash"></i>
+                        </span>
+                    </li>
+
+                    <li class="list-group-item s7_list_row">
+                        <span class="s7_list_item s7_list_checkbox ">
+                             <input  type="checkbox">
+                        </span>
+                        <span class="productsImg"></span>
+                        <span class="s7_list_item s7_list_descr text-info marginL15">
+                            这里是描述信息
+                        </span>
+                        <span class="s7_list_item s7_list_seq marginLR15">10356</span>
+                        <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
+                        <span class="s7_list_item  text-danger marginLR15">未发布</span>
+                        <span class="s7_list_item s7_list_price text-success">99998CNY</span>
+                        <span class="s7_list_item pull-right">
+                            <i class="glyphicon glyphicon-search"></i>
+                            <i class="glyphicon glyphicon-pencil marginLR5"></i>
+                            <i class="glyphicon glyphicon-trash"></i>
+                        </span>
+                    </li>
+
+                    <li class="list-group-item s7_list_row">
+                        <span class="s7_list_item s7_list_checkbox ">
+                             <input  type="checkbox">
+                        </span>
+                        <span class="productsImg"></span>
+                        <span class="s7_list_item s7_list_descr text-info marginL15">
+                            这里是描述信息
+                        </span>
+                        <span class="s7_list_item s7_list_seq marginLR15">10356</span>
+                        <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
+                        <span class="s7_list_item  text-danger marginLR15">未发布</span>
+                        <span class="s7_list_item s7_list_price text-success">99998CNY</span>
+                        <span class="s7_list_item pull-right">
+                            <i class="glyphicon glyphicon-search"></i>
+                            <i class="glyphicon glyphicon-pencil marginLR5"></i>
+                            <i class="glyphicon glyphicon-trash"></i>
+                        </span>
+                    </li>
+
+                    <li class="list-group-item s7_list_row">
+                        <span class="s7_list_item s7_list_checkbox ">
+                             <input  type="checkbox">
+                        </span>
+                        <span class="productsImg"></span>
+                        <span class="s7_list_item s7_list_descr text-info marginL15">
+                            这里是描述信息
+                        </span>
+                        <span class="s7_list_item s7_list_seq marginLR15">10356</span>
+                        <span class="s7_list_item text-primary">2016-05-24—2016-05-25</span>
+                        <span class="s7_list_item  text-danger marginLR15">未发布</span>
+                        <span class="s7_list_item s7_list_price text-success">99998CNY</span>
+                        <span class="s7_list_item pull-right">
+                            <i class="glyphicon glyphicon-search"></i>
+                            <i class="glyphicon glyphicon-pencil marginLR5"></i>
+                            <i class="glyphicon glyphicon-trash"></i>
+                        </span>
+                    </li>
                 </ul>
             </div>
         </div>
-
-
 
 </div>
 
 
 <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script type="text/javascript" src="../../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
+<script type="text/javascript" src="../../bower_components/bootstrap-datepicker/js/locales/bootstrap-datepicker.zh-CN.js"></script>
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
