--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -292,6 +292,6 @@
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap-datepicker/js/locales/bootstrap-datepicker.zh-CN.js"></script>
-<script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="s7Query.js"></script>
 </body>
 </html>
