--- a/ocmoni3/html/s7Edit.html
+++ b/ocmoni3/html/s7Edit.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
+<!--导航 start-->
 <div class="navbar-fixed-top">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -38,57 +38,25 @@
 
     <!--query section start-->
     <div class ="query_section">
-        <form class="form-inline">
-            <!--query row1 start-->
-            <div class="query_row">
-                <span class="query_title">基础信息</span>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <input id ="c1" type="checkbox"><label for="c1">未发布</label>
-                    </div>
-                    <div class="checkbox">
-                        <input id ="c2" type="checkbox"><label for="c2">已发布</label>
-                    </div>
-
-                    <div class="checkbox">
-                        <input  id ="c3" type="checkbox"><label for="c3"> 未生效</label>
-                    </div>
-                    <div class="checkbox">
-                        <input  id ="c4" type="checkbox"> <label for="c4">已生效</label>
-                    </div>
-                    <div class="checkbox">
-                        <input  id ="c5" type="checkbox"> <label for="c5">已过期</label>
-                    </div>
-                </div>
-                <span class="marginR15"></span>
-                <div class="form-group">
-                    <label  class="marginR5">服务</label>
-                    <select class="form-control">
-                        <option>商务名称</option>
-                        <option>子代码</option>
-                    </select>
-                    <input type="email" class="form-control input-sm" style="width: 100px">
-                </div>
-                <div class="form-group">
-                    <label class="marginR5">销售日期</label>
-                    <input type="text" class="form-control input-sm datepicker"  placeholder="起始日期" style="width: 80px">
-                    <input type="text" class="form-control input-sm datepicker"  placeholder="结束日期" style="width: 80px">
-                </div>
-
-                <div class="checkbox marginLR15">
-                    <input  id ="showHideMoreQuerySectionBtn" type="checkbox"> <label for="showHideMoreQuerySectionBtn">更多条件</label>
-                </div>
-                <button type="submit" class="btn btn-default btn-sm btn-primary">查询</button>
-            </div>
-            <!--query row1 end-->
-
-        </form>
+        <span class="query_row">
+            <span class="query_title">新建服务费用</span>
+            <span>服务类型&nbsp;|</span>
+            <span>费用&nbsp;|</span>
+            <span>规则</span>
+            <span class="pull-right marginR15">
+                <button type="submit" class="btn btn-default btn-sm">保存</button>
+                <button type="submit" class="btn btn-default btn-sm btn-success">保存并发布</button>
+            </span>
+            <span class="clearfix"></span>
+        </span>
     </div>
-    <!--query section end-->
+<!--query section end-->
 </div>
+<!--导航 end-->
 
 
 
+<!--主编辑区域 start-->
 <div class="container-fluid main_content" >
     <div class="pull-right" style="margin-bottom: 8px">
         <button class="btn btn-success btn-sm">新建</button>
@@ -98,9 +66,12 @@
     </div>
     <span class="clearfix"></span>
 
+    <div class="test">
+
+    </div>
 
 </div>
-
+<!--主编辑区域 end-->
 
 
 
