--- a/ocmoni3/html/s7Edit.html
+++ b/ocmoni3/html/s7Edit.html
@@ -35,20 +35,17 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-
     <!--query section start-->
     <div class ="query_section">
-        <span class="query_row">
-            <span class="query_title">新建服务费用</span>
-            <span>服务类型&nbsp;|</span>
-            <span>费用&nbsp;|</span>
-            <span>规则</span>
-            <span class="pull-right marginR15">
-                <button type="submit" class="btn btn-default btn-sm">保存</button>
-                <button type="submit" class="btn btn-default btn-sm btn-success">保存并发布</button>
-            </span>
-            <span class="clearfix"></span>
+        <span class="query_title">新建服务费用</span>
+        <span>服务类型&nbsp;|</span>
+        <span>费用&nbsp;|</span>
+        <span>规则</span>
+        <span class="pull-right marginR15" style="padding-top: 2px">
+            <button type="submit" class="btn btn-default btn-sm">保存</button>
+            <button type="submit" class="btn btn-default btn-sm btn-success">保存并发布</button>
         </span>
+        <span class="clearfix"></span>
     </div>
 <!--query section end-->
 </div>
@@ -58,18 +55,7 @@
 
 <!--主编辑区域 start-->
 <div class="container-fluid main_content" >
-    <div class="pull-right" style="margin-bottom: 8px">
-        <button class="btn btn-success btn-sm">新建</button>
-        <button class="btn btn-default btn-sm">复制</button>
-        <button class="btn btn-default btn-sm">发布</button>
-        <button class="btn btn-default btn-sm">截止</button>
-    </div>
-    <span class="clearfix"></span>
-
-    <div class="test">
-
-    </div>
-
+  
 </div>
 <!--主编辑区域 end-->
 
