--- a/ocmoni3/html/s7Edit.html
+++ b/ocmoni3/html/s7Edit.html
@@ -52,10 +52,49 @@
 <!--导航 end-->
 
 
-
 <!--主编辑区域 start-->
-<div class="container-fluid main_content" >
-  
+<div class="container-fluid main_content">
+    <form class="form-horizontal">
+        <div class="edit_panel">
+            <div class="edit_panel_header">
+                <span class="title">1.选择附加服务</span>
+                <span class="serviceInputDiv">test</span><span class="text-info marginL15">必须选到最后一级</span>
+            </div>
+            <div class="edit_panel_body clearfix">
+                <div class="edit_panel_row">
+                    <span class="title">hello world</span>
+                    <span class="content">
+                        <div class="well">
+
+                        </div>
+                    </span>
+                </div>
+
+                <div class="edit_panel_row">
+                    <span class="title">hello world</span>
+                    <span class="content">
+                        <div class="well">
+                            <p>...</p>
+                            <p>...</p>
+                            <p>...</p>
+                        </div>
+                    </span>
+                </div>
+
+                <div class="edit_panel_row">
+                    <span class="title">hello world</span>
+                    <span class="content">
+                        <div class="well">
+                            <p>...</p>
+                            <p>...</p>
+                            <p>...</p>
+                        </div>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </form>
+
 </div>
 <!--主编辑区域 end-->
 
