--- a/ocmoni3/demo.html
+++ b/ocmoni3/demo.html
@@ -32,8 +32,8 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-<div class="container-fluid" style="margin-top: 50px">
-    <form class="form-inline">
+<div class="container-fluid" style="margin-top: 80px">
+    <!--<form class="form-inline">
         <label class="checkbox">
             <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
         </label>
@@ -43,7 +43,10 @@
         <label class="checkbox">
             <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
         </label>
-    </form>
+    </form>-->
+
+
+    <input type="text"  class="input-sm">
 
 </div>
 
