--- a/ocmoni3/html/s7Edit.html
+++ b/ocmoni3/html/s7Edit.html
@@ -5,7 +5,8 @@
     <title>s7编译页面</title>
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css"/>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="s7Edit.css">
 </head>
 <body>
 <!--导航 start-->
@@ -47,7 +48,7 @@
         </span>
         <span class="clearfix"></span>
     </div>
-<!--query section end-->
+    <!--query section end-->
 </div>
 <!--导航 end-->
 
