--- a/ocmoni3/html/s7Query.html
+++ b/ocmoni3/html/s7Query.html
@@ -5,7 +5,8 @@
     <title>s7编译页面</title>
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.css"/>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="s7Query.css"/>
 </head>
 <body>
 
